--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,10 +37,8 @@
 }
 
 .calc{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(1, 6fr);
     position: absolute;
     top: 50%;
     left: 50%;
