--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,10 +48,19 @@
     border: 2px solid red;
 }
 
+h1 {
+    margin-bottom: 15px;
+    font-size: 2.8rem;
+    color: snow;
+    text-shadow: 1px 1px 20px red;
+    text-align: center;
+}
+
 h2 {
     margin-bottom: 15px;
     font-size: 2.8rem;
-    color: #00bb28;
+    color: red;
+    text-shadow: 1px 1px 20px snow;
     text-align: center;
 }
 
@@ -102,26 +111,26 @@ h2 {
 }
 
 #results > #result1{
-    color: red; 
+    color: snow; 
+    text-shadow: 1px 1px 20px red;
     font-size: 1.7rem;
 }
 
 #results > #result2{
-    color: red; 
+    color: snow; 
+    text-shadow: 1px 1px 20px red;
     font-size: 1.7rem;
 }
 
 #results > #result3{
-    color: red; 
+    color: snow; 
+    text-shadow: 1px 1px 20px red;
     font-size: 1.7rem;
 }
 
 #results {
     margin-top: 15px;
     padding: 10px;
-    backdrop-filter: blur( 13.5px );
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
     text-align: center;
     width: 100%;
     max-width: 600px;
@@ -136,6 +145,12 @@ h2 {
 #results p {
     margin: 3px 0;
     font-size: 0.9rem;
+}
+
+.by{
+    font-size: 1.5rem;
+    color: yellow;
+    text-shadow: 2px 2px 10px yellow;
 }
 
 .footer {
@@ -161,8 +176,8 @@ h2 {
     }
 
     .calc img {
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
         object-fit: cover;
         border: 2px solid transparent;
         border-radius: 8px;
