--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,13 +171,17 @@ h2 {
         display: flex;
     }
 
+    h1{
+        font-size: 1.8rem;
+    }
+
     h2 {
         font-size: 1.8rem;
     }
 
     .calc img {
-        width: 40px;
-        height: 40px;
+        width: 45px;
+        height: 45px;
         object-fit: cover;
         border: 2px solid transparent;
         border-radius: 8px;
