--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,17 +147,23 @@ h2 {
     font-size: 0.9rem;
 }
 
+.credits{
+    display: flex;
+    padding-top: 20px;
+    flex-direction: row-reverse;
+    justify-content: center;
+    gap: 20px;
+}
+
 .by{
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     color: yellow;
     text-shadow: 2px 2px 10px yellow;
 }
 
-.footer {
-    margin-top: 1vh;
-  margin-bottom: 5vh;
-    text-align: center;
-    font-size: 0.6rem;
+.icondc{
+    width: 35px;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 1008px){
