--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,13 +56,17 @@
     cursor: pointer;
 }
 
+.box{
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
 .calc{
-    display: grid;
-    grid-template-columns: repeat(1, 6fr);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 500px;
     border-radius: 8px;
     backdrop-filter: blur( 13.5px );
     border: 2px solid red;
